--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.5.0",
+    "@mapbox/search-js-web": "^1.0.0-beta.25",
     "@studiometa/vue-mapbox-gl": "^2.6.0",
+    "@superblocksteam/embed": "^1.2.0",
+    "@turf/turf": "^7.2.0",
     "mapbox-gl": "^3.9.3",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
