--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@studiometa/vue-mapbox-gl": "^2.6.0",
     "@superblocksteam/embed": "^1.2.0",
     "@turf/turf": "^7.2.0",
+    "@vueuse/core": "^12.5.0",
     "mapbox-gl": "^3.9.3",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
     "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0"
   }
