--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mapbox-gl": "^3.9.3",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "daisyui": "^4.12.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.3",
