--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@superblocksteam/embed": "^1.2.0",
     "@turf/turf": "^7.2.0",
     "@vueuse/core": "^12.5.0",
+    "axios": "^1.8.3",
     "mapbox-gl": "^3.9.3",
+    "package.json": "^2.0.1",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "daisyui": "^4.12.2"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^6.0.11",
