--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@superblocksteam/embed": "^1.2.0",
     "@turf/turf": "^7.2.0",
     "@vueuse/core": "^12.5.0",
+    "ag-grid-community": "^33.1.1",
+    "ag-grid-vue3": "^33.1.1",
     "axios": "^1.8.3",
     "mapbox-gl": "^3.9.3",
     "package.json": "^2.0.1",
