--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "package.json": "^2.0.1",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.3",
