--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mapbox-gl": "^3.9.3",
     "package.json": "^2.0.1",
     "pinia": "^2.3.1",
+    "primevue": "^4.3.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue3-easy-data-table": "^1.5.47"
